change kitty.conf to fish

--- a/kitty.conf
+++ b/kitty.conf
@@ -43,7 +43,7 @@ kitty + complete setup zsh | source /dev/stdin
 #fish 
 #For versions of fish earlier than 3.0.0, add the following to your ~/.config/fish/config.fish. Later versions source completions by default. 
 
-shell zsh
+shell fish
 
 
 # BEGIN_KITTY_THEME
